v 1.3.0 Part 4 CHANGE - 完善 CapabilityMap CHANGE - 完善 FPSMCommand BUG FIX - 修复了与铁魔法的mixin冲突 CHANGE - AreaData 边界修复 CHANGE - 优化 FPSMDataManager